--- a/api/templates/layout.html
+++ b/api/templates/layout.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="pyramid web application">
     <title>React and Pyramid</title>
-
+    {% if request.registry.settings.get('webpack-dev-server')==False %}
+    <link rel="stylesheet" type="text/css" href="{{request.static_url('api:../dist/styles.css')}}">
+    {% endif %}
   </head>
 
   <body>
